Fixes for custom iubenda banner

--- a/source/iubenda/_js-iubenda-cookie-script-links.html
+++ b/source/iubenda/_js-iubenda-cookie-script-links.html
@@ -1,1 +1,1 @@
-"cookiePolicyUrl":"/cookie-policy", "privacyPolicyUrl":"/privacy-policy"
+"cookiePolicyUrl":"/cookie-policy","privacyPolicyUrl":"/privacy-policy",
